BlogPosts/LocalDevEnvInKubernetes/DemoCode/infra/kafka/manifest-test-pod-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-cli
  namespace: kafka
  labels:
    app: kafka-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-cli
  template:
    metadata:
      labels:
        app: kafka-cli
    spec:
      # Ideally more in prod, however nothing to wait for locally
      terminationGracePeriodSeconds: 0
      containers:
        - name: kafka
          image: quay.io/strimzi/kafka:0.49.0-kafka-4.1.1
          # image: quay.io/strimzi/kafka:latest
          command:
            - tail
            - -f
            - /dev/null
          resources: {}
            # requests:
            #   memory: "256Mi"
            #   cpu: "100m"
            # limits:
            #   memory: "512Mi"
            #   cpu: "500m"
          volumeMounts:
          - mountPath: /certs/truststore.p12
            name: cluster-cert
            subPath: ca.p12
      volumes:
      - name: cluster-cert
        secret:
          defaultMode: 420
          secretName: our-kafka-cluster-cluster-ca-cert
