BlogPosts/LocalDevEnvInKubernetes/DemoCode/infra/kafka/manifest-kafka-schema-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: kafka
  labels:
    app: schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
        - name: apicurio-registry
          image: apicurio/apicurio-registry:latest-release
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
          - mountPath: /certs/truststore.p12
            name: cluster-cert
            subPath: ca.p12
      volumes:
      - name: cluster-cert
        secret:
          defaultMode: 420
          secretName: our-kafka-cluster-cluster-ca-cert
---
# 3. APICURIO REGISTRY SERVICE
apiVersion: v1
kind: Service
metadata:
  name: svc-schema-registry
  namespace: kafka
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: schema-registry
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hr-schema-registry
  namespace: kafka
spec:
  parentRefs:
  - name: ourgateway
    namespace: networking-gateway
    kind: Gateway
  hostnames:
  - schema-registry.localhost.nhn.no
  - schema-registry.localho.st
  rules:
  - backendRefs:
    - name: svc-schema-registry
      port: 8080
# curl -X POST -H "Content-Type: application/vnd.schemaregistry.v1+json" -d '{"schema":"{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"type\":\"object\",\"properties\":{\"sid\":{\"type\":\"string\"}},\"required\":[\"sid\"],\"additionalProperties\":false}","schemaType":"JSON"}' http://schema-registry.localhost.nhn.no:8080/apis/ccompat/v7/subjects/testschema/versions
# curl http://schema-registry.localhost.nhn.no:8080/apis/ccompat/v7/subjects/testschema/versions/1
